--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,18 @@ testPrintStamp.Rmd
 CopyOftestPrintStamp-V2.pdf
 ibTimbre.csv
 printIbStamp.pdf
+timbre.csv
+printIbStamp.pdf.bak
+printIbStamp.html
+printIbStamp.Rmd.txt
+printIbStamp.Rmd.bak
+pictetTimbreQ3.csv
+pictetTimbre.csv
+IbTimbreQ3-17.csv
+IbTimbreQ3.csv
+StampIB_2017Q1pdf.pdf
+ibTimbreQ4-17.csv
+lodhTimbre.csv
+pictetTimbre_3Q17.csv
+tickerBloomDHARMAEQ.csv
+tickerNavDHARMAEQ
